libs/docvim_parser/tests/snapshots/return/when_not_last.snap
function bad()
  return

  -- Syntax error, because `return` must be the last statement in a block.
  print("Unreachable")
end

↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓ OUTPUT ↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓↓

  |
4 |   -- Syntax error, because `return` must be the last statement in a block.
  |   ^ unexpected token at 4:3
